--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +8,31 @@
     <title>base project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<div class="main">    
-    <h1>quizz</h1>
-    <div class="container">
-        <p id="question">question goes here</p>
-<ul>
-    <li><input class="radioopt" value="a" name="ansoption" type="radio" id="a"><label id="opt_a" for="a">a</label></li>
-    <li><input class="radioopt" value="b" name="ansoption" type="radio" id="b"><label id="opt_b" for="b">b</label></li>
-    <li><input class="radioopt" value="c" name="ansoption" type="radio" id="c"><label id="opt_c" for="c">c</label></li>
-    <li><input class="radioopt" value="d" name="ansoption" type="radio" id="d"><label id="opt_d" for="d">d</label></li>
-</ul>
 
-        <button onclick="validate()">submit</button></div> 
+<body>
+    <div class="main">
+        <h1>quizz</h1>
+        <div class="container">
+            <p id="question">question goes here</p>
+            <ul>
+                <li><input class="radioopt" value="a" name="ansoption" type="radio" id="a"><label id="opt_a"
+                        for="a">a</label></li>
+                <li><input class="radioopt" value="b" name="ansoption" type="radio" id="b"><label id="opt_b"
+                        for="b">b</label></li>
+                <li><input class="radioopt" value="c" name="ansoption" type="radio" id="c"><label id="opt_c"
+                        for="c">c</label></li>
+                <li><input class="radioopt" value="d" name="ansoption" type="radio" id="d"><label id="opt_d"
+                        for="d">d</label></li>
+            </ul>
+
+            <div class="controls">
+                <button id="submit" onclick="validate()">submit</button>
+            </div>
+        </div>
+
+    </div>
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
